<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_phone"
        android:enabled="true"
        android:checked="false"
        android:icon="@drawable/ic_local_phone_white_18dp"
        android:title="@string/bottom_navigation_menu_call"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_like"
        android:enabled="true"
        android:icon="@drawable/ic_star_rate_white_18dp"
        android:title="@string/bottom_navigation_menu_like"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_website"
        android:enabled="true"
        android:icon="@drawable/ic_public_white_18dp"
        android:title="@string/bottom_navigation_menu_public"
        app:showAsAction="ifRoom" />
</menu>