<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_lunch"
                    android:icon="@drawable/baseline_restaurant_menu_white_18dp"
                    android:title="@string/your_lunch" />
                <item
                    android:id="@+id/activity_main_drawer_settings"
                    android:icon="@drawable/baseline_settings_white_18dp"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/activity_main_drawer_logout"
                    android:icon="@drawable/baseline_power_settings_new_white_18dp"
                    android:title="@string/logout" />

            </group>


</menu>