<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activity.MainActivity"
    android:id="@+id/activity_main_coordinator_layout"
    android:background="@drawable/lunch_backgroung">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/lunch_portrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_image_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <Button
        android:id="@+id/button_facebook"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/blue_button_radius"
        android:drawableStart="@drawable/ic_facebook_48"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/sign_in_facebook"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lunch_portrait" />

    <Button
        android:id="@+id/button_google"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/sign_in_google"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:drawableStart="@drawable/ic_google_48"
        android:background="@drawable/red_button_radius"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_facebook" />

</android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>