<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/quantum_grey50"
    android:clickable="true"
    android:focusable="true"
    tools:context=".controller.fragment.SettingsFragment">

    <TextView
        android:id="@+id/textViewNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="8dp"
        android:textStyle="italic"
        android:gravity="center"
        android:text="@string/switch_notification_text"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/quantum_grey200"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotifications"
        tools:layout_editor_absoluteX="-20dp" />

    <Switch
        android:id="@+id/switch_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:textColor="@android:color/holo_orange_dark"
        android:text="@string/switch_notification"
        android:backgroundTint="@android:color/holo_orange_dark"
        tools:targetApi="lollipop" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/quantum_grey200"
        app:layout_constraintTop_toBottomOf="@+id/switch_notifications"
        tools:layout_editor_absoluteX="-20dp" />

    <TextView
        android:id="@+id/textViewLanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="8dp"
        android:textStyle="italic"
        android:gravity="center"
        android:text="@string/select_language_text"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="@color/quantum_grey200"
        app:layout_constraintTop_toBottomOf="@+id/textViewLanguage"
        tools:layout_editor_absoluteX="-20dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:background="@color/quantum_grey200"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:layout_editor_absoluteX="-20dp" />



</androidx.constraintlayout.widget.ConstraintLayout>